--- a/example.config.yml
+++ b/example.config.yml
@@ -1,24 +1,7 @@
-discord:
-    bot_token:
-    bot_id:
-    bot_secret:
-    admin_id:
-    invite_link:
-    redirect_url:
+website_url:
 
-postgres:
-    host:
-    port:
-    database:
-    user:
-    password:
-
-lavalink_nodes:
-    lavalink_1:
-        host:
-        port:
-        password:
-    lavalink_2:
-        host:
-        port:
-        password:
+db_host:
+db_port:
+db_database:
+db_user:
+db_password:
